# cloverleaf

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test_no_copy.py
.github/: CODEOWNERS
benches/: bench_algos.rs  bench_policy_evaluation.rs
docs/: ep-prd.md
examples/: policy_evaluation.py  rsvd.py  smci.py
examples/dataset/pinterest/: eval.sh  evaluate.py  fast_cloverleaf.py  prone_cloverleaf.py  run.sh
scripts/: attention.py  evaluate.py  learn-rank.py  learn.py  query-node.py  query.py  server.py
src/: bitset.rs  candle_utils.rs  distance.rs  embeddings.rs  feature_store.rs  graph.rs  hogwild.rs  io.rs  lib.rs  progress.rs  sampler.rs  vocab.rs
src/algos/: aggregator.rs  alignment.rs  ann.rs  connected.rs  dist.rs  emb_aligner.rs  embedding_diffusion.rs  ep.rs  fast_random_projection.rs  fastrp.rs  feat_propagation.rs  graph_ann.rs  grwr.rs  instantembedding.rs  lpa.rs  lsr.rs  mod.rs  pagerank.rs  policy_evaluation.rs  pprembed.rs  pprrank.rs  prone.rs  reweighter.rs  rsvd.rs  rwr.rs  slpa.rs  smci.rs  utils.rs  vpcg.rs
src/algos/ep/: attention.rs  loss.rs  mod.rs  model.rs  node_sampler.rs  optimizer.rs  scheduler.rs
src/algos/grad_utils/: mod.rs  node_sampler.rs  optimizer.rs  scheduler.rs
tests/: par_iter_mut.rs
