[package]
name = "cloverleaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_xorshift = "0.2"
rand_distr = "0.2"
rayon = "1.5"
float-ord = "0.2"
atomic_float = "0.1"

[dependencies.hashbrown]
version = "0.12"
features = ["rayon"]
