[package]
name = "cloverleaf"
version = "0.1.0"
edition = "2021"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "cloverleaf"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.7"
rand_xorshift = "0.2"
rand_distr = "0.2"
rayon = "1.5"
float-ord = "0.2"
atomic_float = "0.1"
pyo3 = { version = "0.17.1", features = ["extension-module"] }

[dependencies.hashbrown]
version = "0.12"
features = ["rayon"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_algos"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
